--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         crossorigin="anonymous"></script>
     <link href="css.css" type="text/css" rel="stylesheet">
 </head>
-<body>
-    <input type="number" id="main-result"> 
+<body> 
     <div id="main-div" class="container">
-        <input type="text" id="result">
+        <input type="number" class="main-result result" id="main-result">
+        <input type="button" value="All Clear" class="rounded-pill btn btn-primary" id="clear" onclick=all_clear()>
+        <input type="text" class="result" id="result">
         <div class="row">
             <input type="button" class="number-button offset-lg-1 offset-md-2 offset-sm-2 offset-xs-2 mt-2 col-lg-2 col-md-2 col-sm-2 col-xs-2 rounded-circle btn btn-primary" value="1" onclick=operand(1)>
             <input type="button" class="number-button mt-2 col-lg-2 col-md-2 col-sm-2 col-xs-2 rounded-circle btn btn-primary" value="2" onclick=operand(2)>
@@ -39,7 +40,7 @@
         </div>
         <br>
         <div class="row">
-            <input type="button" class="operator-button offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2 mt-0 col-lg-2 col-md-2 col-sm-2 col-xs-2 rounded-circle btn btn-primary" value="." onclick=operand(46)>
+            <input type="button" class="operator-button offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2 mt-0 col-lg-2 col-md-2 col-sm-2 col-xs-2 rounded-circle btn btn-primary" value="CLR" onclick=one_clear()>
             <input type="button" class="number-button mt-0 col-lg-2 col-md-2 col-sm-2 col-xs-2 rounded-circle btn btn-primary" value="0" onclick=operand(0)>
             <input type="button" class="operator-button mt-0 col-lg-2 col-md-2 col-sm-2 col-xs-2 rounded-circle btn btn-primary" value="=" onclick=calculate()>
             <input type="button" class="operator-button mt-0 col-lg-2 col-md-2 col-sm-2 col-xs-2 rounded-circle btn btn-success" value="/" onclick=operator(47)>
